Feature/quarkus api (#3)
* feat: substituição de api nativa http para quarkus

* docs: adequação do relatório à modificação do quarkus + melhoria no relatório